# NewsLetterGenerationUsingCrewAI

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  PYTHON_3_12_FIX.md  PYTHON_VERSION_FIX.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  WARP.md  packages.txt  pyproject.toml  render.yaml  requirements-minimal.txt  requirements.txt  start.sh  streamlit_app.py  test.html  test_gemini.py  test_setup.py  test_system.py
.streamlit/: secrets.toml
logs/: 2025-01-22_20-56-14_research_task.md
src/gui/: app.py  app_backup.py
src/newsletter_gen/: crew.py  crew_simple.py  crew_simple_v2.py  main.py
src/newsletter_gen/config/: agents.yaml  newsletter_template.html  tasks.yaml
src/newsletter_gen/tools/: research.py
